--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,7 +39,7 @@
           
           <a class="dropdown-item" [routerLink]="['/crear-vehiculo']">Crear clase vehiculo</a>
           <a class="dropdown-item" [routerLink]="['/tipo-vehiculos']">Crear vehiculo</a>
-          <a class="dropdown-item" [routerLink]="['/ejemplo']">Ejemplo</a>
+          <!-- <a class="dropdown-item" [routerLink]="['/ejemplo']">Ejemplo</a> -->
           <!--<div class="dropdown-divider"></div>-->
           <!--<a class="dropdown-item" href="#">Mi perfil</a>-->
           <a class="dropdown-item" [routerLink]="['/ajustes']">Ajustes</a>
