--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,10 +39,10 @@
           
           <a class="dropdown-item" [routerLink]="['/crear-vehiculo']">Crear clase vehiculo</a>
           <a class="dropdown-item" [routerLink]="['/tipo-vehiculos']">Crear vehiculo</a>
-          <!-- <a class="dropdown-item" [routerLink]="['/ejemplo']">Ejemplo</a> -->
+          <a class="dropdown-item" [routerLink]="['/lista-vehiculo']">Lista Vehiculos</a> 
           <!--<div class="dropdown-divider"></div>-->
           <!--<a class="dropdown-item" href="#">Mi perfil</a>-->
-          <a class="dropdown-item" [routerLink]="['/ajustes']">Ajustes</a>
+          <a class="dropdown-item" [routerLink]="['/ajustes']">Ajustes Usuario</a>
           <a class="dropdown-item" [routerLink]="['/logout/1']">Salir</a><!--ruta que me llava a la salida-->
         </div>
       </li>
