--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,16 +39,13 @@
           
           <a class="dropdown-item" [routerLink]="['/crear-vehiculo']">Crear clase vehiculo</a>
           <a class="dropdown-item" [routerLink]="['/tipo-vehiculos']">Crear vehiculo</a>
-          <a class="dropdown-item" [routerLink]="['/lista-vehiculo']">Lista Vehiculos</a> 
-          <!--<div class="dropdown-divider"></div>-->
-          <!--<a class="dropdown-item" href="#">Mi perfil</a>-->
+          <a class="dropdown-item" [routerLink]="['/doc-vehiculos']">Lista Vehiculos</a>         
+          <a class="dropdown-item" [routerLink]="['/t-documentos']">Documentos</a>
           <a class="dropdown-item" [routerLink]="['/ajustes']">Ajustes Usuario</a>
           <a class="dropdown-item" [routerLink]="['/logout/1']">Salir</a><!--ruta que me llava a la salida-->
         </div>
       </li>
-      <!--<li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li>-->
+            
     </ul>
    
   </div>
@@ -56,7 +53,6 @@
 
 <!--CONTENIDO-->
 <!--<router-outlet></router-outlet>--->
-
 <!--<login></login>-->
 <!--<register></register>-->
 <!--<tipoVehiculo></tipoVehiculo>-->
