--- a/src/app/components/tipo-vehiculo/tipo-vehiculo.component.html
+++ b/src/app/components/tipo-vehiculo/tipo-vehiculo.component.html
@@ -19,7 +19,7 @@
     <!--ngIf sirve para hacer una condicion si es el nombre y si toca el nombre -->
     <!-- <br> -->
     
-    <form #tipoVehiculo="ngForm" (ngSubmit)="onSubmit(tipoVehiculo)" class="py-1 h-100 col-md-7">
+    <form class="py-1 h-100 col-md-7" #tipoVehiculo="ngForm" (ngSubmit)="onSubmit(tipoVehiculo)">
 
         <div class="form-group">
             <label for="id_vehiculos">seleccione una opcion</label>
@@ -35,24 +35,30 @@
         <!--A LA AVRIABLE tipovehiculo.nombre agregele el nombre-->
         <div class="form-group">
             <label for="nombre">Nombre</label>
-            <input class="form-control" type="text" name="nombre" #nombre="ngModel" [(ngModel)]="tipovehiculo.nombre" required>
+            <input type="text" name="nombre" #nombre="ngModel" [(ngModel)]="tipovehiculo.nombre" class="
+            form-control" required />
+
             <small *ngIf="!nombre.valid && nombre.touched" class="invalid-feedback d-block">
                 este campo es erroneo"!
             </small>
         </div>
 
+        <div class="form-group">
         <label for="numPlaca">Placa</label>
-        <input type="text" name="Placa" class="form-control" #Placa="ngModel" [(ngModel)]="tipovehiculo.placa"
-            required />
-        <small *ngIf="!Placa.valid && Placa.touched" class="invalid-feedback d-block">
-            La placa del vehiculo es erronea!
-        </small>
+        <input type="text" name="Placa" #Placa="ngModel" [(ngModel)]="tipovehiculo.placa" class="
+        form-control" required />
+
+            <small *ngIf="!Placa.valid && Placa.touched" class="invalid-feedback d-block">
+                La placa del vehiculo es erronea!
+            </small>
+        </div>
 
         <!--</div>-->
 
-        <input type="submit" value="Guardar" class="btn btn-info" />        
+        <input type="submit" value="Continuar" class="btn btn-info" (click)="continuar()">        
         <input type="button" value="Regresar" class="btn btn-primary" (click)="regresar()">
 
     </form>
+    
 
 </div>
