--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -41,6 +41,7 @@
           <a class="dropdown-item" [routerLink]="['/tipo-vehiculos']">Crear vehiculo</a>
           <a class="dropdown-item" [routerLink]="['/doc-vehiculos']">Lista Vehiculos</a>         
           <a class="dropdown-item" [routerLink]="['/t-documentos']">Documentos</a>
+          <a class="dropdown-item" [routerLink]="['/listas']">Listas</a>
           <a class="dropdown-item" [routerLink]="['/ajustes']">Ajustes Usuario</a>
           <a class="dropdown-item" [routerLink]="['/logout/1']">Salir</a><!--ruta que me llava a la salida-->
         </div>
