modfica home y listas

--- a/src/app/components/listas/listas.component.html
+++ b/src/app/components/listas/listas.component.html
@@ -1,8 +1,44 @@
 <div class="container py-3 h-100">  
-    holaaaaa
+    <!-- 
+    <ul class="list-group list-group-horizontal">
+        <li class="list-group-item".flex-fill>A third item</li>
+        <li class="list-group-item".flex-fill>A third item</li>
+        <li class="list-group-item".flex-fill>A third item</li>
+      </ul> -->
+      <!-- <ul class="list-group list-group-horizontal-sm">
+        <li class="list-group-item">An item</li>
+        <li class="list-group-item">A second item</li>
+        <li class="list-group-item">A third item</li>
+      </ul>
+      <ul class="list-group list-group-horizontal-md">
+        <li class="list-group-item">An item</li>
+        <li class="list-group-item">A second item</li>
+        <li class="list-group-item">A third item</li>
+      </ul>
+      <ul class="list-group list-group-horizontal-lg">
+        <li class="list-group-item">An item</li>
+        <li class="list-group-item">A second item</li>
+        <li class="list-group-item">A third item</li>
+      </ul>
+      <ul class="list-group list-group-horizontal-xl">
+        <li class="list-group-item">An item</li>
+        <li class="list-group-item">A second item</li>
+        <li class="list-group-item">A third item</li>
+      </ul>
+      <ul class="list-group list-group-horizontal-xxl">
+        <li class="list-group-item">An item</li>
+        <li class="list-group-item">A second item</li>
+        <li class="list-group-item">A third item</li>
+      </ul> -->
      
     <!-- <p *ngIf="status != 'success'"> 
         ( Crea un nuevo Documento )
         
-    </p> --> 
+    </p> -->
+    <ul class="list-group list-group-horizontal-xl">
+        <li class="list-group-item">An item</li>
+        <li class="list-group-item">A second item</li>
+        <li class="list-group-item">A third item</li>
+      </ul>
+    
 </div>      
