motro de busqueda 1ra

--- a/src/app/components/listas/listas.component.html
+++ b/src/app/components/listas/listas.component.html
@@ -1,44 +1,51 @@
-<div class="container py-3 h-100">  
-    <!-- 
-    <ul class="list-group list-group-horizontal">
-        <li class="list-group-item".flex-fill>A third item</li>
-        <li class="list-group-item".flex-fill>A third item</li>
-        <li class="list-group-item".flex-fill>A third item</li>
-      </ul> -->
-      <!-- <ul class="list-group list-group-horizontal-sm">
-        <li class="list-group-item">An item</li>
-        <li class="list-group-item">A second item</li>
-        <li class="list-group-item">A third item</li>
-      </ul>
-      <ul class="list-group list-group-horizontal-md">
-        <li class="list-group-item">An item</li>
-        <li class="list-group-item">A second item</li>
-        <li class="list-group-item">A third item</li>
-      </ul>
-      <ul class="list-group list-group-horizontal-lg">
-        <li class="list-group-item">An item</li>
-        <li class="list-group-item">A second item</li>
-        <li class="list-group-item">A third item</li>
-      </ul>
-      <ul class="list-group list-group-horizontal-xl">
-        <li class="list-group-item">An item</li>
-        <li class="list-group-item">A second item</li>
-        <li class="list-group-item">A third item</li>
-      </ul>
-      <ul class="list-group list-group-horizontal-xxl">
-        <li class="list-group-item">An item</li>
-        <li class="list-group-item">A second item</li>
-        <li class="list-group-item">A third item</li>
-      </ul> -->
-     
-    <!-- <p *ngIf="status != 'success'"> 
-        ( Crea un nuevo Documento )
-        
-    </p> -->
-    <ul class="list-group list-group-horizontal-xl">
-        <li class="list-group-item">An item</li>
-        <li class="list-group-item">A second item</li>
-        <li class="list-group-item">A third item</li>
-      </ul>
-    
-</div>      
+<br>
+<br>
+<div class="tablas">  
+
+  <div class="input-group">
+    <input type="search" class="form-control rounded" placeholder="Search"
+    aria-label="Search" aria-describedby="search-addon" />
+    <button type="button" class="btn btn-outline-primary">search</button>
+  </div>
+
+<br>
+<br>
+<!-- <div class="tablas"> -->
+  <table class="table table-hover">
+    <thead>
+      <tr>
+        <td class="table">vehiculos</td>
+        <td class="table">tipovehiculo</td>
+        <td class="table">tipodocumento</td>
+        <td class="table">fechainicio</td>
+        <td class="table">fechafin</td>
+        <td class="table">url</td>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <!-- <th scope="row">1</th> -->
+        <td>Mark</td>
+        <td>Otto</td>
+        <td>@mdo</td>
+        <td>Otto</td>
+        <td>@mdo</td>
+        <td>@mdo</td>
+      </tr>
+    </tbody>
+
+    <tbody>
+      <tr>
+        <!-- <th scope="row">1</th> -->
+        <td>Mark</td>
+        <td>Otto</td>
+        <td>@mdo</td>
+        <td>Otto</td>
+        <td>@mdo</td>
+        <td>@mdo</td>
+      </tr>
+    </tbody>
+
+  </table>
+
+</div>
