--- a/src/app/components/tipo-vehiculo/tipo-vehiculo.component.html
+++ b/src/app/components/tipo-vehiculo/tipo-vehiculo.component.html
@@ -55,7 +55,7 @@
 
         <!--</div>-->
 
-        <input type="submit" value="Continuar" class="btn btn-info" (click)="continuar()">        
+        <input type="submit" value="guardar" class="btn btn-info">        
         <input type="button" value="Regresar" class="btn btn-primary" (click)="regresar()">
 
     </form>
