--- a/src/app/components/listas/listas.component.css
+++ b/src/app/components/listas/listas.component.css
@@ -3,9 +3,15 @@
     margin-left: auto;
     margin-right: auto;
     display: table;
-    border-collapse: collapse;
+    /*border-collapse: collapse;
     border-color: black;
+    border: 1px solid black;*/
+    /* border: 1px solid black;
+    border-collapse: collapse; */
+    padding: 15px;
+    text-align: left;
 }
+
 .container{
     align-items: center;
     margin-left: auto;
