--- a/src/app/components/listas/listas.component.html
+++ b/src/app/components/listas/listas.component.html
@@ -4,7 +4,7 @@
 <div class="tablas">  
 
 
-  <div class="card-body">
+ <!--  <div class="card-body">
     <div class="row mt-12">
         <div class="col-sm-6 pb-3">
             <label for="exampleAccount"><h1>Busqueda de vehiculo</h1></label>
@@ -24,15 +24,49 @@
         </div>
     </div>
 </div>
-
+ -->
 
 <br>
-<!-- <div class="tablas"> -->
-  <table class="table table-hover">
+
+
+<div class="card">
+  <div class="card-header">
+    <h2>Busqueda de vehiculo</h2>
+  </div>
+  <div class="card-body">
+    <div class="row mt-12">
+      <div class="col-sm-10 pb-3"><input class="form-control" id="exampleAccount"
+        placeholder="Nombre o placa del vehiculo" type="text"
+        (input)="getGener02($event)" value={{nombre}} required>
+    <div class="col-sm-12">
+        <div class="card card-body mb-1" *ngFor="let result of data"
+            (click)="getDatos(result)" style="cursor: pointer;">
+            <h6> Nombre: {{result.nombre}} </h6>
+            <small class="text-primary">
+                placa: {{result.placa}}
+            </small>            
+     
+    <!-- h5 class="card-title">Special title treatment</h5>
+    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p> -->
+<!--     <a href="#" class="btn btn-primary">Go somewhere</a>
+ -->  
+</div>
+</div>
+</div>
+</div>
+</div>
+
+</div>
+
+
+
+<!-- ********************************************************************* -->
+<!-- <div class="tablas"> no-->
+ <!--  <table class="table table-hover">
     <thead>
-      <tr>
-        <!-- <td class="table">Vehiculos</td> -->
-        <td class="table">Nombre</td>
+      <tr> -->
+        <!-- <td class="table">Vehiculos</td> no-->
+        <!-- <td class="table">Nombre</td>
         <td class="table">Placa</td>
         <td class="table">Documento</td>
         <td class="table">Fecha inicio</td>
@@ -40,11 +74,11 @@
         <td class="table">Url</td>
       </tr>
     </thead>
-    <tbody>
-      <tr *ngFor="let dt of tDocumentos"><!-- {{v.nombre}} -->
-        <!-- <th scope="row">1</th> -->
-        <!-- <td></td> -->
-        <td>{{nombre}}</td>
+    <tbody> -->
+     <!--  <tr *ngFor="let dt of tDocumentos"> --> <!--  si    - no {{v.nombre}} -->
+        <!-- <th scope="row">1</th> no-->
+        <!-- <td></td> no -->
+        <!-- <td>{{nombre}}</td>
         <td>{{placa}}</td>
         <td>{{dt.tipoDocumento}}</td>
         <td><input type="date" class="form-control" id="start"
@@ -58,18 +92,17 @@
      <angular-file-uploader 
       
       [config]="afuConfig">
-      </angular-file-uploader>   
+      </angular-file-uploader>    -->
 
-<!-- <angular-file-uploader #fileUpload1
-[config]="afuConfig" 
-[resetUpload]="true"
-(ApiResponse)="listasUpload($event)">
-</angular-file-uploader>
+<!-- <angular-file-uploader #fileUpload1 no
+[config]="afuConfig"                     no
+[resetUpload]="true"                     no
+(ApiResponse)="listasUpload($event)">    no
+</angular-file-uploader>                 no
          -->
-
-      </tr>
+     <!--  </tr>
     </tbody>
-
-  </table>
+ 
+  </table>-->
 
 </div>
