hasta aqui listas ok se mueve x las 2 tablas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,7 +39,7 @@
           
           <a class="dropdown-item" [routerLink]="['/crear-vehiculo']">Crear clase vehiculo</a>
           <a class="dropdown-item" [routerLink]="['/tipo-vehiculos']">Crear vehiculo</a>
-          <a class="dropdown-item" [routerLink]="['/doc-vehiculos']">Lista Vehiculos</a>         
+          <!-- <a class="dropdown-item" [routerLink]="['/doc-vehiculos']">Lista Vehiculos</a> -->         
           <a class="dropdown-item" [routerLink]="['/t-documentos']">Documentos</a>
           <a class="dropdown-item" [routerLink]="['/listas']">Listas</a>
           <a class="dropdown-item" [routerLink]="['/ajustes']">Ajustes Usuario</a>
