--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,8 +37,8 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           
-          <a class="dropdown-item" [routerLink]="['/crear-vehiculo']">Crear clase vehiculo</a>
-          <a class="dropdown-item" [routerLink]="['/tipo-vehiculos']">Crear vehiculo</a>
+          <a class="dropdown-item" [routerLink]="['/crear-vehiculo']">Clase vehiculo</a>
+          <a class="dropdown-item" [routerLink]="['/tipo-vehiculos']">Tipo Vehiculo</a>
           <!-- <a class="dropdown-item" [routerLink]="['/doc-vehiculos']">Lista Vehiculos</a> -->         
           <a class="dropdown-item" [routerLink]="['/t-documentos']">Documentos</a>
           <a class="dropdown-item" [routerLink]="['/listas']">Listas</a>
