--- a/src/app/components/listas/listas.component.html
+++ b/src/app/components/listas/listas.component.html
@@ -68,16 +68,11 @@
       
         [config]="afuConfig"
         [resetUpload]="true"
-        (ApiResponse)="listasUpload($event,dt.id_Documentos
-        )">
+        (ApiResponse)="listasUpload($event,dt.id_Documentos)">
       </angular-file-uploader>      
-      <!-- fin objeto subir doc -->
-
-        <!-- <angular-file-uploader #fileUpload1 
-        [config]="afuConfig"                     
-        [resetUpload]="true"                     
-        (ApiResponse)="listasUpload($event)">    
-        </angular-file-uploader> -->      
+      <!-- fin objeto subir doc -->  
+      
+      
 
         </tr>      
     </tbody>
