--- a/src/app/components/t-documentos/t-documentos.component.html
+++ b/src/app/components/t-documentos/t-documentos.component.html
@@ -1,6 +1,8 @@
-<div class="container py-3 h-100">   
+<div class="container py-3 h-100">
+    
+    <h1>{{page_title}}</h1>
     <p *ngIf="status != 'success'"> 
-        ( Crea un nuevo Documento )
+        ( Crea un nuevo Documento nuevo nuevo )
     </p>    
     
     <hr />
