--- a/src/app/components/vehiculos/vehiculos.component.html
+++ b/src/app/components/vehiculos/vehiculos.component.html
@@ -2,7 +2,7 @@
     
     <h1>{{page_title}}</h1>
     <p *ngIf="status != 'success'">       
-        ( Crea un nuevo vehiculo ) 
+        ( Crea una nueva clase des vehiculo ) 
     </p>
     <hr/> <!--LINEA DIVISORIA-->
 
