--- a/src/app/components/t-documentos/t-documentos.component.html
+++ b/src/app/components/t-documentos/t-documentos.component.html
@@ -37,7 +37,7 @@
     
         <!--</div>-->
 
-        <input type="submit" value="Guardar" class="btn btn-info">        
+        <input type="submit" value="Guardar" class="btn btn-info" (click)="showModal()">        
         <input type="button" value="Regresar" class="btn btn-primary" (click)="regresar()">
         
     </form>   
